[package]
name = "ryot_legacy_assets"
version = "0.2.0"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "A utility library for the Ryot game engine focused on Tibia-like graphics."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "ryot", "tibia"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_ecs",
    "dep:bevy_utils",
]

[dependencies.bevy_ecs]
version = "0.13"
features = ["bevy_reflect"]
optional = true

[dependencies.bevy_utils]
version = "0.13"
optional = true

[dependencies]
ryot_core = { path = "../ryot_core", version = "0.2.0" }
ryot_grid = { path = "../ryot_grid", version = "0.2.0" }
derive_more.workspace = true
glam.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
rstest.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[build-dependencies]
prost-build = "0.12"