[package]
name = "ryot_pathfinder"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "Provides specialized pathfinding functionalities for Bevy 2D, essential for dynamic navigation and movement within games."
homepage = "https://github.com/ry-ot/Ryot"
repository = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["pathfinding", "navigation", "tiled-2d-games", "bevy", "ryot"]
categories = ["game-development", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[dependencies.pathfinding]
version = "4.9.1"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_tasks = { workspace = true, features = ["multi-threaded"] }

ryot_core = { path = "../ryot_core", version = "0.2" }
ryot_utils = { path = "../ryot_utils", version = "0.2" }
ryot_tiled = { path = "../ryot_tiled", version = "0.2.0", optional = true }

derive_more.workspace = true

[dev-dependencies]
bevy.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true

[[example]]
name = "basic"

[[example]]
name = "multiple"

[[example]]
name = "with_obstacles"

[[example]]
name = "stress_test"