[package]
name = "ryot_ray_casting"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "An implementation of ray casting targeting 2d tile-based games using bevy ecs and ryot ecossystem."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "ryot", "ray-cast", "tiled-2d", "tiled"]
categories = ["game-development", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

ryot_utils = { path = "../ryot_utils", version = "0.2" }
ryot_tiled = { path = "../ryot_tiled", version = "0.2" }

derive_more.workspace = true
glam.workspace = true
itertools.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true