[package]
name = "ryot_sprites"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "Focuses on sprite management, handling animations and graphical representations for dynamic visual content in games."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["sprites", "animations", "graphics-2d", "ryot"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
debug = [
    "dep:bevy_hierarchy",
    "dep:bevy_stroked_text",
    "dep:bevy_transform",
]

[dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_sprite.workspace = true
bevy_time.workspace = true
bevy_utils.workspace = true
bevy_asset_loader.workspace = true

bevy_transform = { workspace = true, optional = true }
bevy_hierarchy = { workspace = true, optional = true }
bevy_stroked_text = { workspace = true, optional = true }

ryot_utils = { path = "../ryot_utils", version = "0.2" }
ryot_core = { path = "../ryot_core", version = "0.2" }
ryot_tiled = { path = "../ryot_tiled", version = "0.2" }

async-std = "1.12.0"
derive_more.workspace = true
glam.workspace = true
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
rand.workspace = true
itertools = "0.12.1"

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true