[package]
name = "ryot_tibia"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "Specializes in managing and integrating Tibia-specific legacy assets, tailored for games inspired by the classic Tibia."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["tibia", "legacy-games", "game-assets", "asset-integration", "ryot"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "bevy_utils",
]

[dependencies]
bevy_app = { workspace = true, optional = true }
bevy_asset = { workspace = true, optional = true }
bevy_utils = { workspace = true, optional = true }

ryot_core = { path = "../ryot_core", version = "0.2" }
ryot_sprites = { path = "../ryot_sprites", version = "0.2" }

derive_more.workspace = true
glam.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true

[build-dependencies]
prost-build = "0.12"