[package]
name = "ryot_tibia_assets"
version = "0.2.0"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "MIT OR Apache-2.0"
description = "A compatibility layer between Ryot and Tibia's assets."
homepage = "https://github.com/opentibiabr/Ryot"
repository = "https://github.com/opentibiabr/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["gamedev", "ryot", "tibia"]
categories = ["game-development", "game-engines", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

bevy = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "bevy_utils",
]

[dependencies.bevy_app]
version = "0.13"
optional = true

[dependencies.bevy_asset]
version = "0.13"
optional = true

[dependencies.bevy_utils]
version = "0.13"
optional = true

[dependencies]
ryot_assets = { path = "../ryot_assets", version = "0.2.0" }
derive_more.workspace = true
glam.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
serde_repr = "0.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true

[build-dependencies]
prost-build = "0.12"