[package]
name = "ryot_tiled"
version = "0.2.3"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "AGPL-3.0-only"
description = "Supports tile-based game development, providing tools for drawing and managing tilesets and tiled maps."
homepage = "https://github.com/ry-ot/Ryot"
repository = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["tiled-maps", "tiled-2d-games", "level-design", "game-development", "ryot"]
categories = ["game-development", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[features]
default = ["bevy"]

egui = ["dep:egui"]

bevy = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_ecs",
    "dep:bevy_hierarchy",
    "dep:bevy_math",
    "dep:bevy_reflect",
    "dep:bevy_render",
    "dep:bevy_sprite",
    "dep:bevy_time",
    "dep:bevy_transform",
    "dep:bevy_utils",
    "dep:bevy_window",
    "dep:bevy_stroked_text",
]

debug = []
test-utils = ["dep:quickcheck", "dep:quickcheck_macros"]
lmdb = ["dep:heed"]
pathfinding = ["bevy", "dep:ryot_pathfinder", "dep:ryot_derive"]
trajectories = ["bevy", "dep:ryot_trajectories", "dep:ryot_derive"]

[dependencies]
bevy_app = { workspace = true, optional = true }
bevy_asset = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_hierarchy = { workspace = true, optional = true }
bevy_math = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_render = { workspace = true, optional = true }
bevy_sprite = { workspace = true, optional = true }
bevy_stroked_text = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true }
bevy_transform = { workspace = true, optional = true }
bevy_utils = { workspace = true, optional = true }
bevy_window = { workspace = true, optional = true }

ryot_core.workspace = true
ryot_derive = { workspace = true, optional = true }
ryot_pathfinder = { workspace = true, optional = true }
ryot_trajectories = { workspace = true, optional = true }
ryot_utils.workspace = true

derive_more.workspace = true
glam.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
quickcheck = { workspace = true, optional = true }
quickcheck_macros = { workspace = true, optional = true }
heed = { workspace = true, optional = true }
rayon.workspace = true
color-eyre.workspace = true
postcard.workspace = true
thiserror.workspace = true
egui = { workspace = true, optional = true }
itertools = "0.12.1"

[dev-dependencies]
rstest.workspace = true
time-test.workspace = true