[package]
name = "ryot_trajectories"
version = "0.2.2"
edition = "2021"
authors = [
    "Lucas Grossi <lucas.ggrosis@gmail.com>",
    "Luan Santos <cargo@luan.sh>",
]
license = "AGPL-3.0-only"
description = "Implements trajectory capabilities for Bevy, crucial for interactive game mechanics like line-of-sight, fog, complex collision, etc."
homepage = "https://github.com/ry-ot/Ryot"
repository = "https://github.com/ry-ot/Ryot"
documentation = "https://docs.rs/ryot/"
keywords = ["ray-cast", "bevy", "trajectory", "game-mechanics", "ryot"]
categories = ["game-development", "games"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

ryot_core = { path = "../ryot_core", version = "0.2" }
ryot_utils = { path = "../ryot_utils", version = "0.2" }

rand = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }

derive_more.workspace = true
glam.workspace = true
itertools.workspace = true

[dev-dependencies]
bevy.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
rstest.workspace = true
time-test.workspace = true
rand.workspace = true

[features]
stubs = [
    "dep:bevy",
    "dep:rand",
]

[[example]]
name = "basic"

[[example]]
name = "stress_test"

[[bench]]
name = "grid_2d"